--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ p {
 
 /* The div container constrains the content width within the main container to 600px */
 div {
-  margin: auto;
+  margin: 0 auto;
   width: 600px;
 }
 
