--- a/style.css
+++ b/style.css
@@ -11,7 +11,15 @@ h1,
 h2,
 h3
 {font-family: "Playfair Display", Times, serif;
-font-size: 24px;
+h1 {
+  font-size: 32px;  
+}  
+h2 {
+  font-size: 24px;
+}   
+h3 {
+  font-size: 18px;
+} 
 color: black;
     text-align:center;
 }
